@@ -585,6 +585,153 @@ int	evaluate(int *result, char *exp, char *error, int maxerrlen)
 
 /******************************************************************************
  *                                                                            *
+ * Function: extract_numbers                                                  *
+ *                                                                            *
+ * Purpose: Extract from string numbers with prefixes (A-Z)                   *
+ *                                                                            *
+ * Return value:                                                              *
+ *                                                                            *
+ * Author: Eugene Grigorjev                                                   *
+ *                                                                            *
+ * Comments: !!! Don't forget sync code with PHP !!!                          *
+ *           Use zbx_free_numbers to free allocated memory                    *
+ *                                                                            *
+ ******************************************************************************/
+static char**	extract_numbers(char *str, int *count)
+{
+	char *s = NULL;
+	char *e = NULL;
+
+	char **result = NULL;
+
+	int	dot_founded = 0;
+	int	len = 0;
+
+	assert(count);
+
+	*count = 0;
+
+	/* find start of number */
+	for ( s = str; *s; s++)
+	{
+		if ( !isdigit(*s) ) {
+			continue; /* for s */
+		}
+
+		if ( s != str && '{' == *(s-1) ) {
+			/* skip functions '{65432}' */
+			s = strchr(s, '}');
+			continue; /* for s */
+		}
+
+		dot_founded = 0;
+		/* find end of number */
+		for ( e = s; *e; e++ )
+		{
+			if ( isdigit(*e) ) {
+				continue; /* for e */
+			}
+			else if ( '.' == *e && !dot_founded ) {
+				dot_founded = 1;
+				continue; /* for e */
+			}
+			else if ( *e >= 'A' && *e <= 'Z' )
+			{
+				e++;
+			}
+			break; /* for e */
+		}
+
+		/* number founded */
+		len = e - s;
+		(*count)++;
+		result = zbx_realloc(result, sizeof(char*) * (*count));
+		result[(*count)-1] = zbx_malloc(NULL, len + 1);
+		memcpy(result[(*count)-1], s, len);
+		result[(*count)-1][len] = '\0';
+
+		s = e;
+	}
+
+	return result;
+}
+
+static void	zbx_free_numbers(char ***numbers, int count)
+{
+	register int i = 0;
+
+	if ( !numbers ) return;
+	if ( !*numbers ) return;
+
+	for ( i = 0; i < count; i++ )
+	{
+		zbx_free((*numbers)[i]);
+	}
+
+	zbx_free(*numbers);
+}
+
+/******************************************************************************
+ *                                                                            *
+ * Function: expand_trigger_description_constants                             *
+ *                                                                            *
+ * Purpose: substitute simple macros in data string with real values          *
+ *                                                                            *
+ * Parameters: data - trigger description                                     *
+ *                                                                            *
+ * Return value:                                                              *
+ *                                                                            *
+ * Author: Eugene Grigorjev                                                   *
+ *                                                                            *
+ * Comments: !!! Don't forget sync code with PHP !!!                          *
+ *           replcae ONLY $1-9 macros NOT {HOSTNAME}                          *
+ *                                                                            *
+ ******************************************************************************/
+static void	expand_trigger_description_constants(
+		char **data,
+		zbx_uint64_t triggerid
+	)
+{
+	DB_RESULT db_trigger;
+	DB_ROW	db_trigger_data;
+
+	char	**numbers = NULL;
+	int	numbers_cnt = 0;
+
+	int	i = 0;
+
+	char	*new_str = NULL;
+
+	char	replace[3] = "$0";
+
+	db_trigger = DBselect("select expression from triggers where triggerid=" ZBX_FS_UI64, triggerid);
+
+	if ( (db_trigger_data = DBfetch(db_trigger)) ) {
+
+		numbers = extract_numbers(db_trigger_data[0], &numbers_cnt);
+
+		for ( i = 0; i < 9; i++ )
+		{
+			replace[1] = '0' + i + 1;
+			new_str = string_replace(
+					*data,
+					replace, 
+					i < numbers_cnt ? 
+						numbers[i] :
+						""
+					);
+			zbx_free(*data);
+			*data = new_str;
+		}
+
+		zbx_free_numbers(&numbers, numbers_cnt);
+	}
+
+	DBfree_result(db_trigger);
+}
+
+/******************************************************************************
+ *                                                                            *
  * Function: substitute_simple_macros                                         *
  *                                                                            *
  * Purpose: substitute simple macros in data string with real values          *
@@ -656,6 +803,10 @@ void	substitute_simple_macros(DB_EVENT *event, DB_ACTION *action, char **data, i
 		*data);
 
 	if('\0' == *data[0]) return;
+
+	if ( macro_type & MACRO_TYPE_TRIGGER_DESCRIPTION ) {
+		expand_trigger_description_constants(data, event->objectid);
+	}
 
 	pl = *data;
 	while((pr = strchr(pl, '{')))
